src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 229 27% 8%;
    --foreground: 232 28% 79%;
    --muted: 229 12% 15%;
    --muted-foreground: 229 12% 65%;
    --popover: 229 27% 5%;
    --popover-foreground: 232 28% 89%;
    --card: 229 27% 6%;
    --card-foreground: 232 28% 84%;
    --border: 229 17% 13%;
    --input: 229 17% 16%;
    --primary: 174 42% 65%;
    --primary-foreground: 174 42% 5%;
    --secondary: 174 30% 25%;
    --secondary-foreground: 174 30% 85%;
    --accent: 229 27% 23%;
    --accent-foreground: 229 27% 83%;
    --destructive: 5 88% 59%;
    --destructive-foreground: 0 0% 100%;
    --ring: 174 42% 65%;
    --radius: 0.5rem;
  }

  .dark {
    --background: 229 27% 8%;
    --foreground: 232 28% 79%;
    --muted: 229 12% 15%;
    --muted-foreground: 229 12% 65%;
    --popover: 229 27% 5%;
    --popover-foreground: 232 28% 89%;
    --card: 229 27% 6%;
    --card-foreground: 232 28% 84%;
    --border: 229 17% 13%;
    --input: 229 17% 16%;
    --primary: 174 42% 65%;
    --primary-foreground: 174 42% 5%;
    --secondary: 174 30% 25%;
    --secondary-foreground: 174 30% 85%;
    --accent: 229 27% 23%;
    --accent-foreground: 229 27% 83%;
    --destructive: 5 88% 59%;
    --destructive-foreground: 0 0% 100%;
    --ring: 174 42% 65%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

